# airedale

./: .ddla-overrides  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  license-3rdparty.yml
_docs/plans/: scenario-working-directory.md
examples/: experiment.toml  gateway.toml
examples/skills/example-skill/: SKILL.md
scripts/: check_license_headers.py
src/airedale/: __init__.py  __main__.py  cli.py  dataset.py  experiment.py  gateway.py  mcp.py  observability.py  progress.py  skills.py  summary.py  tracing.py  types.py  workdir.py
src/airedale/config/: __init__.py  experiment.py  gateway.py
src/airedale/harness/: __init__.py  base.py  claude.py  codex.py
src/airedale/scoring/: __init__.py  rubric.py
src/dd_ai_devx_evals/: __init__.py  __main__.py  cli.py  dataset.py  experiment.py  gateway.py  mcp.py  progress.py  skills.py  summary.py  workdir.py
src/dd_ai_devx_evals/config/: experiment.py  gateway.py
src/dd_ai_devx_evals/harness/: __init__.py  base.py  claude.py  codex.py
src/dd_ai_devx_evals/scoring/: __init__.py  rubric.py
tests/: conftest.py  test_cli.py  test_config_experiment.py  test_config_gateway.py  test_dataset.py  test_experiment.py  test_gateway.py  test_harness_claude.py  test_harness_codex.py  test_harness_span_shape.py  test_mcp.py  test_scoring.py  test_skills.py  test_types.py  test_workdir.py
