[project]
name = "airedale"
dynamic = ["version"]
description = "Config-driven evaluation harness for agentic LLM runs, reporting to Datadog LLM Observability Experiments"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "Datadog, Inc." }]
keywords = ["llm", "evals", "datadog", "llmobs", "mcp", "agents", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "ddtrace==4.10.7",
    "anthropic==0.116.0",
    "openai==2.44.0",
    "claude-agent-sdk==0.2.114",
    "openai-codex==0.1.0b3",
    "openai-codex-cli-bin>=0.137.0a4", # 0.136.0 is missing a manylinux wheel
    "mcp==1.28.1",
    "httpx==0.28.1",
    "rich==15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
]

[project.scripts]
airedale = "airedale.cli:main"

[project.urls]
Homepage = "https://github.com/DataDog/airedale"
Repository = "https://github.com/DataDog/airedale"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/airedale/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airedale"]

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
exclude = [".git", ".venv", "venv", "__pycache__", "build", "dist", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["airedale"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
